Se esta estructurando el modulo de inicio

--- a/inicio/style-inicio.css
+++ b/inicio/style-inicio.css
@@ -151,6 +151,9 @@ a.sidebar-link {
     margin-left: -264px;
 }
 
+.buscador{
+    width: 23rem;
+}
 /* Footer y nav */
 
 @media (max-width: 767.98px) {
